# vecinita

./: .dockerignore  .env.example  .gitignore  .gitmodules  DOCUMENTATION_INDEX.md  Dockerfile  FRONTEND_FETCH_FIX.md  FRONTEND_SWAP_RESEARCH.md  GCP_DEPLOYMENT_QUICK_START.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  MIGRATION_MODAL_TO_CLOUD_RUN.md  QUICKSTART.md  QUICK_START_ENHANCED.md  README.md  RESEARCH_COMPLETION_SUMMARY.md  WINDOWS_DEPENDENCY_FIX.md  deploy_to_render.ps1  docker-compose.yml  file_structure.txt  main.py  pyproject.toml  render.yaml  render.yml  requirements.txt  run_tests.ps1  setup.sh  setup_edge_function.ps1  uv.toml
.github/: copilot-instructions.md  render-llm.txt
.github/workflows/: test.yml
backend/: Dockerfile  Dockerfile.embedding  Dockerfile.scraper  README.md  pyproject.toml  temp_schema.sql
backend/data/output/: chunks.txt  failed.txt
backend/scripts/: AUTO_STARTUP_GUIDE.md  CRON_VALIDATION.md  RPC_OVERLOAD_FIX.md  clean_and_load.py  cron_scraper.sh  data_scrape_load.py  deploy_edge_function.ps1  deploy_gcp.sh  deploy_modal.sh  fix_rpc_overload.sql  manage_embedding_tables.py  mark_chunks_processed.sql  migrate_model.py  schema_install.sql  schema_v2_multimodel.sql  schema_v2_multimodel_views.sql  scrape_analytics.py  startup.sh  update_rpc.py  update_rpc_psycopg.py
backend/scripts_local/: init_local_db.sql  set_repo_secrets.sh  test_local_integration.py  verify_services.sh
backend/src/: test_faq.py
backend/src/agent/: main.py
backend/src/agent/data/: model_selection.json  system_rules.md
backend/src/agent/tools/: __init__.py  clarify_question.py  db_search.py  static_response.py  web_search.py
backend/src/agent/utils/: faq_loader.py  html_cleaner.py  load_faq.py
backend/src/cli/: __main__.py
backend/src/embedding_service/: README.md  __init__.py  client.py  main.py  modal_app.py
backend/src/scraper/: config.py  link_tracker.py  loaders.py  main.py  processors.py  scraper.py  uploader.py
backend/src/utils/: __init__.py  supabase_embeddings.py
backend/src/utils/scraper/: config.py  main.py  processors.py  scraper.py
backend/tests/: INDEX.md  SCRAPER_TESTS_SUMMARY.md  __init__.py  conftest.py  test_clarify_question_tool.py  test_db_search_tool.py  test_scraper_advanced.py  test_scraper_cli.py  test_scraper_module.py  test_scraper_upload_chunks.py  test_sources.py  test_supabase_embeddings.py  test_web_search_tool.py
client/: test_client.py
data/: README.md  chunks.txt  extracted_links.txt  failed.txt  failed_urls.txt  new_content_chunks.txt  test_single.txt  test_urls.txt  test_urls_clean.txt  test_urls_small.txt  urls.txt
data/config/: playwright_sites.txt  recursive_sites.txt  skip_sites.txt
data/input/: urls.txt
data/manual_scraping/: 2025-12-22_Communidades-saludables-Healthy-communities.txt  providence_resources_chunks_full.txt  short_run.txt
docker/: Dockerfile.backend
docs/: API_INTEGRATION_SPEC.md  ARCHITECTURE_MICROSERVICE.md  BEFORE_AFTER_STREAMING.md  CONFIGURATION_CONSISTENCY_REPORT.md  DB_SEARCH_DIAGNOSTIC_GUIDE.md  DEPLOYMENT_READY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_FRONTEND_SWAP.md  EDGE_FUNCTION_ARCHITECTURE.md  EDGE_FUNCTION_QUICK_START.md  EMBEDDING_SERVICE_ARCHITECTURE.md  EMBEDDING_SERVICE_CONNECTION_VALIDATION.md  ENHANCED_STREAMING_WITH_PLANNING.md  FINAL_STATUS_REPORT.md  FRONTEND_DEPLOYMENT.md  FRONTEND_GRADUAL_ROLLOUT.md  FRONTEND_SWAP_COMPLETE.md  FRONTEND_SWAP_QUICK_REFERENCE.md  FULL_STACK_RESTORATION_COMPLETE.md  GCP_CLOUD_RUN_DEPLOYMENT.md  GCP_DEPLOYMENT.md  GETTING_STARTED.md  GITHUB_CODESPACES_SECRETS_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_MICROSERVICE_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ENHANCED_STREAMING.md  INDEX.md  LANGGRAPH_IMPLEMENTATION_COMPLETE.md  LANGGRAPH_REFACTOR_SUMMARY.md  LOCATION_CONTEXT_INTEGRATION_SUMMARY.md  LOCATION_CONTEXT_QUICK_REF.md  LOCATION_CONTEXT_SETUP.md  MODAL_HYBRID_ARCHITECTURE.md  MODAL_SETUP.md  PRIVACY_POLICY.md  QUICKSTART.md  QUICK_REFERENCE_MICROSERVICE.md  RAG_AGENT_README.md  README.md  (+8 more)
docs/ai-generated/: IMPLEMENTATION_SUMMARY.md  LANGSMITH_QUICK_REFERENCE.md  LANGSMITH_SETUP.md  LANGSMITH_SETUP_COMPLETE.md  LOCAL_LLM_SETUP.md  RAG_AGENT_README.md  TESTING.md  TEST_SETUP_SUMMARY.md
docs/architecture/: NEW_CODE_STRUCTURE.md  SCRAPER_BACKEND_ORGANIZATION_VERIFIED.md  SCRAPER_ORGANIZATION.md  SCRAPER_ORGANIZATION_SUMMARY.md
docs/features/: BEFORE_AFTER_STREAMING.md  CHUNKING_UPLOAD_PIPELINE.md  HTML_CLEANER_IMPLEMENTATION.md  HTML_CLEANER_README.md  IMPLEMENTATION_STREAMING_MODE.md  (+3 more)
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  README_INTEGRATION.md  components.json  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.js  vite.config.ts
gcp/: deploy_to_vm.ps1
run/: build_beta.sh  daily_cleanup.sh  run_beta.sh  stop_beta.sh
scripts/: data_scrape_load.ps1  data_scrape_load.py  data_scrape_load.sh  example_rag_usage.py  fastapi_integration_example.py  langsmith_agent_example.py  run_fastapi.py  run_server.ps1  run_server.sh  run_tests.sh  schema_install.sql
src/: agent_config.py  langsmith_config.py  main.py  rag_agent.py  setup_check.py  supabase_retriever.py  workflow_diagram.py
supabase/: config.toml
tests/: README.md  README_SCRAPER_TESTS.md  TEST_SCRAPER_MODULE.md  bulk_stress_test.sh  conftest.py  demo_suite.sh  direct_db_test.py  query_isolation.py  query_isolation.sh  run_tests.bat  run_tests.sh  spanish_handshake.py  spanish_test.sh  supabase_test.py  test_agent_config.py  test_agent_langgraph.py  test_db_search_tool.py  test_faq_loader.py  test_html_cleaner.py  test_langsmith_config.py  test_load_faq.py  test_main.py  test_playwright_client.py  test_scraper_cli.py  test_scraper_enhancements.py  test_scraper_module.py  test_scraper_to_text.py  test_setup_check.py  test_src_imports.py  test_static_response_tool.py  test_supabase_db_test.py  test_ui.py  test_vector_loader.py  test_web_search_tool.py  test_workflow_diagram.py
utils/: load_faq.py  scraper_to_text.py  supabase_db_test.py
(+73 files in other folders)
